# NapCatQQ-CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py
src/models/: __init__.py  app_config.py  info_model.py
src/screens/: __init__.py  home.py  manager.py  menu.py
src/styles/: screens.tcss
src/utils/: log.py  path.py
