[project]
name = "NapCatQQ-CLI"
version = "0.1.0"
description = "NapCatQQ 跨平台管理器"
authors = [
    {name = "AQiaoYo", email = "SugarQiao@outlook.com"},
]
dependencies = ["httpx>=0.28.1", "textual>=6.1.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
known_first_party = ["NapCatQQ-CLI"]
profile = "black"
line_length = 120
import_heading_stdlib = "标准库导入"
import_heading_thirdparty = "第三方库导入"
import_heading_firstparty = "项目内模块导入"
